# hf-kernels-rust

./: .gitignore  Cargo.toml  README.md
examples/bench/: Cargo.toml
examples/bench/src/: main.rs
examples/candle/: Cargo.toml
examples/candle/src/: main.rs
examples/raw/: Cargo.toml
examples/raw/src/: main.rs
